--- a/Din_Reto0/src/view/FXMLDocument.fxml
+++ b/Din_Reto0/src/view/FXMLDocument.fxml
@@ -2,9 +2,13 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane fx:id="idPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.FXMLDocumentController">
    <children>
-      <Label fx:id="idLabel" layoutX="128.0" layoutY="237.0" prefHeight="75.0" prefWidth="478.0" />
+      <Label fx:id="idLabel" alignment="CENTER" layoutX="58.0" layoutY="237.0" prefHeight="75.0" prefWidth="682.0" textAlignment="CENTER">
+         <font>
+            <Font size="46.0" />
+         </font></Label>
    </children>
 </Pane>
